# chip_atsame5x

./: CMakeLists.txt  README.md
chip_atsame5x/hal/documentation/: ac_sync.rst  freqmeter_sync.rst  pdec_async.rst
chip_atsame5x/hal/include/: hal_ac_sync.h  hal_freqmeter_sync.h  hal_pdec_async.h  hpl_freqmeter.h  hpl_freqmeter_async.h  hpl_freqmeter_sync.h  hpl_pdec_async.h
chip_atsame5x/hal/src/: hal_ac_sync.c  hal_freqmeter_sync.c  hal_pdec_async.c
chip_atsame5x/hpl/ac/: hpl_ac.c
chip_atsame5x/hpl/freqm/: hpl_freqm.c
chip_atsame5x/hpl/pdec/: hpl_pdec.c
chip_atsame5x/include/: sam.h  same53j20a.h
